JDK 23: update notes and examples